SonarQube initial fixes